--- a/index.html
+++ b/index.html
@@ -18,35 +18,41 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- NAVBAR -->
-	 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+	 <nav id="navbar" class="navbar navbar-dark navbar-expand-lg mb-5">
 	 	<div class="brand-name">
-	 		<a class="navbar-brand" href="#" id="brand-font">Adriann Furigay</a>
+	 		<a class="navbar-brand text-white" href="#navbar" id="brand-font">Adriann Furigay</a>
 	 	</div>
-	 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sample-nav">
+	 	<button id="nav-tog" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sample-nav">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="sample-nav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a href="./index.html" class="nav-link">Home</a>
+					<a id="nav-hov" href="#navbar" class="nav-link text-white">Home</a>
 				</li>
 				<li>
-					<a href="./project.html" class="nav-link">Projects</a>
+					<a id="nav-hov" href="#my-project" class="nav-link text-white">Projects</a>
 				</li>
 				<li>
-					<a href="./tools.html" class="nav-link">Tools</a>
+					<a id="nav-hov" href="#tools-i-use" class="nav-link text-white">Tools</a>
 				</li>
 				<li>
-					<a href="./contact.html" class="nav-link">Contact</a>
+					<a id="nav-hov" href="#contact" class="nav-link text-white">Contact</a>
 				</li>
 			</ul>
 		</div>
 	</nav>
 	<!-- END OF NAVBAR -->
-	<div class="container">
+
+	<div id="container-con" class="container">
 		<div class="row jumbotron align-items-center my-3 flex-column text-white" id="banner">
 			<div class="col-10 col-md-2">
 				<img src="./image/adriann.jpg" class="img-fluid rounded-circle border border-dark">
@@ -54,34 +60,118 @@
 			<h1 class="my-2 text-center">Adriann Furigay</h1>
 			<h4 class="my-2 text-center">Full Stack Web Developer</h4>
 			<div class="col-md-8">
-				<p class="text-justify my-2">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	
-				</p>
+				<p class="text-justify my-2 text-center">
+						Hello, My name is Adriann. I am a web developer, I design and build sites that are beautiful and highly usable.
+				</p>		
 			</div>
 		</div>
-	</div>
+	
 
 	<!-- PROJECT -->
 
+			<h2 id="my-project" class="text-center text-white">MY PROJECTS</h2>
+			<div class="row">
+				<div class="m-auto p-2 ">
+					<div class="card" style="width: 18rem;">
+					  <img src="https://images.pexels.com/photos/3987066/pexels-photo-3987066.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" class="card-img-top" alt="...">
+					  <div class="card-body">
+					  	<h4>CAPSTONE 1</h4>
+					    <p class="card-text">Front End</p>
+					    <a href="https://github.com/adriannfurigay21" target="_blank" class="btn btn-primary stretched-link px-5">View</a>
+					  </div>
+					</div>
+				</div>
+				<div class="m-auto p-2">
+					<div class="card" style="width: 18rem;">
+					  <img src="https://images.pexels.com/photos/3987066/pexels-photo-3987066.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" class="card-img-top" alt="...">
+					  <div class="card-body">
+					  	<h4>CAPSTONE 2</h4>
+					    <p class="card-text">Back End</p>
+					    <a href="https://github.com/adriannfurigay21" target="_blank" class="btn btn-primary stretched-link px-5">View</a>
+					  </div>
+					</div>
+				</div>
+				<div class="m-auto p-2">
+					<div class="card" style="width: 18rem;">
+					  <img src="https://images.pexels.com/photos/3987066/pexels-photo-3987066.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" class="card-img-top" alt="...">
+					  <div class="card-body">
+					  	<h4>CAPSTONE 3</h4>
+					    <p class="card-text">Full Stack</p>
+					    <a href="https://github.com/adriannfurigay21" target="_blank" class="btn btn-primary stretched-link px-5">View</a>
+					  </div>
+					</div>
+				</div>
 
+			</div>
+		
 
+	<!-- TOOLS -->
+			<h2 id="tools-i-use" class="text-center text-white">Tools I Use</h2>
+		 	<h3 class="text-center mt-4 text-white">Front End</h3>
+		 		<div class="jumbotron d-flex flex-row align-items-center justify-content-center">			
+		 			<img id="logo" src="./image/logo-html5.png">
+		 			<img id="logo" src="./image/logo-css3.png">
+		 			<img id="logo" src="./image/logo-bootstrap.png">
+		 		</div>
+		 		<h3 class=" text-center my-3 text-white">Back End</h3>
+		 		<div class="jumbotron d-flex flex-row align-items-center justify-content-center flex-wrap">			
+		 			<img id="logo" src="./image/logo-javascript.png">
+		 			<img id="logo" src="./image/logo-mongodb.png">
+		 			<img id="logo" src="./image/logo-nodejs.png">
+		 			<img id="logo" src="./image/logo-rest.png">
+		 			<img id="logo" src="./image/logo-expressjs.png">
+		 			<img id="logo" src="./image/logo-postman.png">
+		 			<img id="logo" src="./image/logo-heroku.png">	
+		 		</div>
+		 		<h3 class="text-center my-3 text-white">Full Stack</h3>
+		 		<div class="jumbotron d-flex flex-row align-items-center justify-content-center flex-wrap"> 			
+		 			<img id="logo" src="./image/logo-mongodb.png">	
+		 			<img id="logo" src="./image/logo-expressjs.png">	
+		 			<img id="logo" src="./image/logo-react.png">	
+		 			<img id="logo" src="./image/logo-nodejs.png">
+		 		</div>		
+		 	
+	
+	<!-- CONTACT -->
+				<h2 id="contact" class="text-center text-white">Contact</h2>	
+				<div class="row my-3">
+						<div class="col-md-6 my-3">
+							<h3 class="text-center my-4 text-white">Our Location</h3>
+							<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=roxas%20district&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>	
+						</div>
+						<div class="col-md-6 my-3 ">
+							<h3 class="text-center my-4 text-white">Contact Us</h3>
+							<div class="form-group">
+								<label for="fname" class="text-white">Name:</label>
+								<input type="text" name="fname" id="fname" placeholder="Enter Full Name" class="form-control">
+							</div>
+							<div class="form-group"> 
+								<label for="email" class="text-white">Email:</label>
+								<input type="email" name="email" id="email" placeholder="sample@text.com" class="form-control">
+							</div>
+							<div class="form-group">
+								<label for="text-area" class="text-white">Message:</label>
+								<textarea class="form-control" id="text-area" rows="5"></textarea>
+							</div>
+							<button type="submit" class="btn btn-success btn-block">Submit</button>
+						</div>
+					</div>
+	
+		</div>
 
-	<footer class="p-3 bg-dark mt-5 position-sticky">
-		<div class="d-flex justify-content-end">
-			<a href="https://facebook.com" target="_blank" class="mx-3">
+	<footer class="p-2 mt-5 position-sticky">
+		<div class="d-flex justify-content-center">
+
+			<a href="https://facebook.com/adriann.furigay" target="_blank" class="mx-3">
 				<i class="fab fa-facebook"></i>
 			</a>
-			<a href="https://gitlab.com" target="_blank" class="mx-3">
-				<i class="fab fa-gitlab"></i>
+			<a href="https://instagram.com/adriann021" target="_blank" class="mx-3">
+				<i class="fab fa-instagram"></i>
 			</a>
-			<a href="https://linkedin.com" target="_blank" class="mx-3">
-				<i class="fab fa-linkedin"></i>
-			</a>		
+			<a href="https://twitter.com/adriannfurigay" target="_blank" class="mx-3">
+				<i class="fab fa-twitter"></i>
+			</a>
+
 		</div>
 	</footer>
 
